src/app/components/iterations-panel/iterations-panel.component.less
@import (reference) '../../../assets/stylesheets/_base';
@import (reference) '../../../assets/stylesheets/shared/_utilities';

.f8-itr {
  background-color: @color-pf-black-900;
  &-wrapper {
    color: @color-pf-white;
  }
  &__panel {
    &-hdr {
      width: 100%;
      display: inline-block;
      padding: 20px 15px;
      border-left: 4px solid;
      border-left-color: transparent;
    }
    .node-drop-slot,
    .list-group-item {
      padding: 0 !important;
      margin:  0 !important;
      background-color: @color-pf-black-900;
      &:hover {
        background-color: @color-pf-black-700;
      }
      .tree-list-item {
        display: inline-block;
        width: 100%;
        padding: 0 !important;
        background-color: @color-pf-black-900;
        &:hover {
          background-color: @color-pf-black-700;
        }
        span {
          float: left;
        }
        .toggle-children-wrapper {
          width: 25px;
          padding-top: 5px;
          padding-left: 30px;
        }
      }
      .on-hover-background {
        background-color: @color-pf-black-700;
      }
    }
    .tree-children {
      .tree-list-item {
        .toggle-children-wrapper {
          padding-left: ((@grid-gutter-width/3) * 4);
        }
        .f8-itr-entry {
          padding-left: ((@grid-gutter-width/3)) * 5.5;
        }
      }
    }
  }
  &__List {
    &--expanded {
      padding-left: 0;
      margin-bottom: 0;
      .dropdown-kebab-pf {
        .btn-link {
          color: @color-pf-white;
        }
      }
      > li {
        padding: 15px;
        padding-left: 45px;
        list-style: none;
        &.active {
          border-left: 4px solid;
          border-left-color: transparent;
          background-color: @color-pf-black-700;
          &.f8-itr--selected {
            border-left: 4px solid;
            border-left-color: @color-pf-blue;
            background-color: @color-pf-black-700;
          }
        }
        &:hover {
          background-color: @color-pf-black-800 ;
        }
      }
    }
    &-parent {
      float: right;
      padding-top: 3px;
      padding-left: 12px;
      &.left-truncate {
        color: @color-pf-white;
        background-color: transparent;
        &::before {
          color: @color-pf-white;
          line-height: 1.3;
        }
      }
      span {
        font-size: 12px;
      }
    }
  }
  &-name {
    font-size: 12px;
  }
  &-status {
    float: left;
    width: 100%;
    color: @color-pf-black-600;
    font-size: 12px;
  }
  &-count {
    float: right;
    color: @color-pf-black-600;
    font-size: 12px;
  }
  &-desc {
    margin: 0;
    font-size: 12px;
    &:after,
    &:before {
      background: transparent !important;
      content: none !important;
    }
  }
  &__add {
    &-btn {
      color: @color-pf-blue;
      font-size: 13px;
    }
  }
}

